[package]
name = "print-tgbot"
authors = ["dyakovei<dyakov.hellvisionstudio@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
teloxide = { version = "0.11.3", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros"] }
